# ASLAM2

./: CMakeLists.txt  main.cpp
Core/: Feature.h  Frame.cpp  Frame.h  GraphNode.cpp  KeyFrame.cpp  KeyFrame.h  Landmark.cpp  Landmark.h  Map.cpp  Map.h  PinholeCamera.h
Drawer/: DenseMapDrawer.cpp  DenseMapDrawer.h  MapDrawer.cpp  Viewer.cpp  Viewer.h
Features/: Extractor.h  Matcher.cpp  Matcher.h  SVOextractor.cpp
IO/: DatasetMicrosoft.h
PlaceRecognition/: LoopClosing.cpp  LoopClosing.h
Solver/: BundleAdjustment.cpp  BundleAdjustment.h  Gicp.cpp  Gicp.h  PnP.cpp  PnP.h  PnPRansac.cpp  PoseGraph.cpp  PoseGraph.h
System/: LocalMap.cpp  LocalMap.h  Mapping.cpp  Mapping.h  System.cpp  Tracking.cpp  Tracking.h
Tests/Extraction speed/: SPEED TEST.ods  speed.cpp
Tests/RecallPrecision/: RP.cpp  plot_presicion_test.m
Tests/RecallPrecision/Blur/: FAST-BRIEF.csv  FAST-ORB.csv  GFTT-BRIEF.csv  GFTT-ORB.csv  ORB-BRIEF.csv  ORB-ORB.csv  plot_presicion_test.m
Tests/RecallPrecision/Illumination/: FAST-BRIEF.csv  FAST-ORB.csv  GFTT-BRIEF.csv  GFTT-ORB.csv  ORB-BRIEF.csv  ORB-ORB.csv  plot_presicion_test.m
Tests/RecallPrecision/Rotation/: FAST-BRIEF.csv  FAST-ORB.csv  GFTT-BRIEF.csv  GFTT-ORB.csv  ORB-BRIEF.csv  ORB-ORB.csv  plot_presicion_test.m
Tests/RecallPrecision/Viewpoint/: FAST-BRIEF.csv  FAST-ORB.csv  GFTT-BRIEF.csv  GFTT-ORB.csv  ORB-BRIEF.csv  ORB-ORB.csv  plot_presicion_test.m
Tests/Repeatability/: repeatability.cpp
Tests/Repeatability/Blur/: FAST-BRIEF-b.csv  FAST-BRISK-b.csv  FAST-FREAK-b.csv  FAST-ORB-b.csv  GFTT-BRIEF-b.csv  GFTT-ORB-b.csv  ORB-BRIEF-b.csv  ORB-ORB-b.csv  plotorep.m
Tests/Repeatability/Illumination/: FAST-BRIEF-i.csv  FAST-BRISK-i.csv  FAST-FREAK-i.csv  FAST-ORB-i.csv  GFTT-BRIEF-i.csv  GFTT-ORB-i.csv  ORB-BRIEF-i.csv  ORB-ORB-i.csv  plotorep.m
Tests/Repeatability/Rotation/: FAST-BRIEF-r.csv  FAST-BRISK-r.csv  FAST-FREAK-r.csv  FAST-ORB-r.csv  GFTT-BRIEF-r.csv  GFTT-ORB-r.csv  ORB-BRIEF-r.csv  ORB-ORB-r.csv  plotorep.m
Tests/Repeatability/Viewepoint/: FAST-BRIEF-vp.csv  FAST-BRISK-vp.csv  FAST-FREAK-vp.csv  FAST-ORB-vp.csv  GFTT-BRIEF-vp.csv  GFTT-ORB-vp.csv  ORB-BRIEF-vp.csv  ORB-ORB-vp.csv  plotorep.m
src/Core/: Feature.cpp  Feature.h  Frame.cpp  Frame.h  GraphNode.cpp  GraphNode.h  KeyFrame.cpp  KeyFrame.h  Landmark.cpp  Landmark.h  Map.cpp  Map.h
src/Drawer/: DenseMapDrawer.cpp  DenseMapDrawer.h  MapDrawer.cpp  MapDrawer.h  Viewer.cpp
src/Features/: Matcher.cpp  Matcher.h
src/IO/: Dataset.h  DatasetAICL.cpp  DatasetAICL.h  DatasetMicrosoft.cpp
src/PlaceRecognition/: KeyFrameDatabase.cpp  KeyFrameDatabase.h  LoopClosing.cpp  LoopClosing.h
src/Solver/: BundleAdjustment.cpp  BundleAdjustment.h  Gicp.cpp  Gicp.h  Icp.cpp  Icp.h  Kabsch.cpp  Kabsch.h  PnPRansac.cpp  PnPRansac.h  PoseGraph.cpp  SE3solver.cpp  SE3solver.h
src/System/: Common.h  Converter.cpp  Converter.h  LocalMap.cpp  LocalMap.h  Mapping.cpp  Mapping.h  System.cpp  System.h  Tracking.cpp  Tracking.h
